# ChangeLog for dev-libs/libtasn1
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/ChangeLog,v 1.230 2015/03/29 11:59:02 alonbl Exp $

*libtasn1-4.4 (29 Mar 2015)

  29 Mar 2015; Alon Bar-Lev <alonbl@gentoo.org> +libtasn1-4.4.ebuild,
  -files/libtasn1-4.3-build.patch, -libtasn1-4.3.ebuild:
  Version bump + cleanup

  10 Mar 2015; Mike Frysinger <vapier@gentoo.org> libtasn1-4.2.ebuild:
  Mark arm64/m68k/s390/sh stable.

*libtasn1-4.3 (09 Mar 2015)

  09 Mar 2015; Alon Bar-Lev <alonbl@gentoo.org> +files/libtasn1-4.3-build.patch,
  +libtasn1-4.3.ebuild:
  Version bump

  01 Feb 2015; Alon Bar-Lev <alonbl@gentoo.org> -files/libtasn1-3.6-build.patch,
  -libtasn1-3.6.ebuild, -libtasn1-3.8.ebuild, -libtasn1-4.0.ebuild,
  -libtasn1-4.1.ebuild:
  Cleanup

  01 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> libtasn1-4.2.ebuild:
  ia64 stable wrt bug #532560

  09 Jan 2015; Tobias Klausmann <klausman@gentoo.org> libtasn1-4.2.ebuild:
  Stable on alpha, bug 532560

  02 Jan 2015; Agostino Sarubbo <ago@gentoo.org> libtasn1-4.2.ebuild:
  Stable for sparc, wrt bug #532560

  01 Jan 2015; Agostino Sarubbo <ago@gentoo.org> libtasn1-4.2.ebuild:
  Stable for ppc64, wrt bug #532560

  31 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libtasn1-4.2.ebuild:
  Stable for ppc, wrt bug #532560

  26 Dec 2014; Markus Meier <maekke@gentoo.org> libtasn1-4.2.ebuild:
  arm stable, bug #532560

  26 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libtasn1-4.2.ebuild:
  Stable for x86, wrt bug #532560

  26 Dec 2014; Pacho Ramos <pacho@gentoo.org> libtasn1-4.2.ebuild:
  amd64 stable wrt bug #532560

  15 Dec 2014; Jeroen Roovers <jer@gentoo.org> libtasn1-4.2.ebuild:
  Stable for HPPA (bug #532560).

*libtasn1-4.2 (15 Sep 2014)

  15 Sep 2014; Alon Bar-Lev <alonbl@gentoo.org> +libtasn1-4.2.ebuild:
  Version bump

*libtasn1-3.8 (23 Aug 2014)
*libtasn1-4.1 (23 Aug 2014)
