@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libsdl
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libsdl/ChangeLog,v 1.232 2015/03/31 04:47:29 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libsdl/ChangeLog,v 1.233 2015/03/31 09:25:24 patrick Exp $
+
+*libsdl-1.2.15-r4 (31 Mar 2015)
+
+  31 Mar 2015; Patrick Lauer <patrick@gentoo.org> +libsdl-1.2.15-r4.ebuild:
+  Restore stable
 
   31 Mar 2015; Michael Sterrett <mr_bones_@gentoo.org> -libsdl-1.2.15-r4.ebuild:
   old
