@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libtasn1
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/ChangeLog,v 1.230 2015/03/29 11:59:02 alonbl Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/ChangeLog,v 1.232 2015/03/31 09:16:00 ago Exp $
+
+  31 Mar 2015; Agostino Sarubbo <ago@gentoo.org> libtasn1-4.4.ebuild:
+  Stable for x86, wrt bug #544922
+
+  31 Mar 2015; Agostino Sarubbo <ago@gentoo.org> libtasn1-4.4.ebuild:
+  Stable for amd64, wrt bug #544922
 
 *libtasn1-4.4 (29 Mar 2015)
 
